<resources>
    <string name="app_name">Almulla</string>
    <string name="title_welcome">Welcome</string>
    <string name="bottomMenu_calculator">Calculator</string>
    <string name="bottomMenu_Encryption">Encryption</string>
    <string name="bottomMenu_To_Do">To-Do</string>
    <string name="bottomMenu_Stopwatch">Stopwatch</string>
    <string name="editText_hint_message">Message</string>
    <string name="editText_hint_secretKey">Secret Key</string>
    <string name="btn_text_Encrypt">Encrypt</string>
    <string name="btn_text_Decrypt">Decrypt</string>
    <string name="title_delete">Delete</string>
    <string name="popup_desc_delete">Are you sure you want to delete this task?</string>
    <string name="popup_OK">OK</string>
    <string name="popup_Cancel">Cancel</string>
    <string name="edittext_taskname">Task Name</string>
    <string name="edittext_dateTime">Date and time</string>
    <string name="btn_save">Save</string>
    <string name="btn_clear">Clear</string>

    <string name="txt_encerpted_decrypted">Encrypted/decripted String</string>

    <string name="nav_change_lang">Change Language</string>
    <string name="nav_Logout">Logout</string>
    <string name="nav_Logout_question">Are you sure you want to logout?</string>




    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
</resources>
