<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/change_lang"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/nav_change_lang" />

        <TextView
            android:id="@+id/txt_logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/nav_Logout" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:text="App version 1.0.0" />

</RelativeLayout>

